Closed Bug 544887 Opened 14 years ago Closed 14 years ago

Omnia 2: Soft keyboard pop-up is on top of search engine bar in the awesome bar on first run

Categories

(Firefox for Android Graveyard :: General, defect)

Fennec 1.1
All
Windows Mobile 6 Professional
defect
Not set
normal

Tracking

(status1.9.2 .2-fixed)

VERIFIED FIXED
Tracking Status
status1.9.2 --- .2-fixed

People

(Reporter: aakashd, Assigned: blassey)

Details

Attachments

(2 files, 1 obsolete file)

Build Id:
Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.2.2pre) Gecko/20100208 Namoroka/3.6.2pre Fennec/1.0a4pre

Steps to Reproduce:
1. Open Fennec
2. Click on the url bar to open the awesome bar

Actual Results:
The softkb menu bar shows on top of the search bar

Expected Results:
The search bar should show on top of the soft keyboard, when instanced, and the menu bar when the softkb is not instanced.
Attached image screen shot
just want to confirm that this is the situation you're seeing
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → bugmail
Attachment #425881 - Flags: review?(mozbugz)
Comment on attachment 425881 [details] [diff] [review]
patch

Add a comment above the +  HideWindowChrome(aFullScreen); call that states that this is what the base window does.

wanna try removing:
   MoveWindow(mWnd, rc.left, rc.top, rc.right-rc.left, rc.bottom-rc.top, TRUE);

+      if (SipGetInfo(&sipInfo)) 

Extra white space

In nsWindow::MakeFullScreen(PRBool aFullScreen), please wrap those lines to ~80 chars.  easier to read.
Attachment #425881 - Flags: review?(mozbugz) → review+
Attachment #425881 - Flags: approval1.9.2.2?
carrying dougt's review
Attachment #425881 - Attachment is obsolete: true
Attachment #425885 - Flags: review+
Attachment #425885 - Flags: approval1.9.2.2?
Attachment #425881 - Flags: approval1.9.2.2?
This is resolved...
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
verified FIXED on builds:
Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.2.2pre) Gecko/20100208 Namoroka/3.6.2pre Fennec/1.0a4pre
Status: RESOLVED → VERIFIED
Attachment #425885 - Flags: approval1.9.2.2?
Component: Windows Mobile → General
QA Contact: mobile-windows → general
Hardware: ARM → All
tracking-fennec: ? → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: