bug 544887 - Soft keyboard pop-up is on top of search engine bar in the awesome bar on first run r=dougt